<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".ui.activity.SubscriptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SubscriptionActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:outlineSpotShadowColor="@color/DarkGray"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageButton
                    android:id="@+id/ib_close_main"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/barMenuItemPadding"
                    android:src="@drawable/ic_close_24"
                    app:layout_constraintRight_toRightOf="parent"
                    app:tint="@color/app_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/app_subscription"
                    android:fontFamily="@font/circularctd_bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/str_first_3_months"
                    android:textColor="@color/app_color"
                    android:fontFamily="@font/circularctd_bold"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/fm_sec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_first">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="start"
                        android:text="@string/str_yearly_subscription"
                        android:textColor="@color/black"
                        android:fontFamily="@font/circularstd_medium"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/fm_third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/fm_sec">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="start"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="1.2dp"
                        android:text="@string/text_subscrption_details"
                        android:textColor="@color/black"
                        android:fontFamily="@font/circularstd_medium"
                        android:textSize="20sp" />
                </FrameLayout>

                <Button
                    android:id="@+id/btn_subscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/subscribe_now"
                    android:textAllCaps="false"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:fontFamily="@font/circularctd_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fm_third" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_subscription">

                    <TextView
                        android:id="@+id/tv_terms_of_use"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/terms_of_use"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/circularctd_bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/privacy_policy"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:fontFamily="@font/circularctd_bold"
                        android:textColor="@color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/tv_restore_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:visibility="gone"
                    android:text="@string/restore_purchase"
                    android:textColor="@color/app_color"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/ll_policy" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>